# template-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .yamllint.yaml  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  requirements_dev.txt  requirements_testing.txt  setup.py
.github/: MANIFEST.in  dependabot.yaml  labeler.yaml  release.yaml
.github/workflows/: auto-label.yml  bot.yaml  build.yml  code-style.yaml  code-style.yml  doc.yaml  doc.yml  flake8.yml  publish.yaml  publish.yml  pytest.yaml  pytest.yml  stubs.yaml  style.yml  test.yaml
conda-forge/recipes/template/: meta.yaml
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
dev/_downloads/1ecaf32698a15da6a6bf0a54b3c5fd6b/: 00_logging.ipynb
dev/_downloads/971f2c33db2baef5789dafc0c9ad4769/: 00_logging.py
dev/_sources/: sg_execution_times.rst.txt
dev/_static/: documentation_options.js
dev/api/: index.html  logging.html
dev/changes/: index.html  latest.html
doc/: Makefile  conf.py  index.rst  links.inc  references.bib
doc/_templates/autosummary/: model.rst
doc/api/: index.rst  logging.rst
src/template/: __init__.py
src/template/_commands/: main.py  sys_info.py
src/template/utils/: __init__.py  config.py  logs.py
staging/: genindex.html  index.html  searchindex.js  sg_execution_times.html
staging/_downloads/1ecaf32698a15da6a6bf0a54b3c5fd6b/: 00_logging.ipynb
staging/_sources/: index.rst.txt  sg_execution_times.rst.txt
staging/changes/: index.html  latest.html
template/: __init__.py  __init__.pyi  _version.py  conftest.py
template/_commands/: sys_info.py
template/_commands/tests/: test_main.py  test_sys_info.py
template/commands/: main.py  sys_info.py
template/commands/tests/: test_main.py
template/utils/: __init__.py  __init__.pyi  _checks.py  _checks.pyi  _config.py  _docs.py  _docs.pyi  _fixes.py  _imports.py  _imports.pyi  _logs.py  _tests.pyi  config.py  config.pyi  docs.py  logs.py  logs.pyi
template/utils/tests/: test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
tests/: conftest.py
tests/_commands/: test_main.py  test_sys_info.py
tests/utils/: test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
tools/: stubgen.py
tutorials/: 00_logging.py
utils/: checks.py
